--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -25,6 +25,7 @@
   //PCファースト
   html {
     font-size: 16px;
+    scroll-behavior: smooth;
 
     @media (max-width: $inner) {
       font-size: vw(strip-unit($inner), 16);
