--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100vh;
     background-color: $green-accent;
-    padding-top: rem(104);
+    margin-top: rem(71);
     overflow: scroll;
 }
 
