--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -1,98 +1,88 @@
 @use "global" as *;
 
 .about__inner {
-    max-width: rem(1130);
+    max-width: rem(600);
     padding-left: $padding-sp;
     padding-right: $padding-sp;
     margin-inline: auto;
     @include mq(md){
+        max-width: rem(1130);
         padding-left: $padding-pc;
         padding-right: $padding-pc;
     }
 }
 
-.about__body-inner {
-    max-width: rem(600);
-    padding-left: rem(15);
-    padding-right: rem(15);
-    margin-inline: auto;
-    @include mq(md){
-        max-width: rem(1130);
-        position: relative;
-        padding: 0 rem(25);
-    }
-  }
-
-.about__image-container {
+.about__body {
     position: relative;
-    margin-top: rem(28);
-    max-width: rem(600);
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
+    margin-top: rem(30);
     @include mq(md){
-      margin-top: rem(46);
-      height: rem(767);
-      max-width: rem(1080);
+        margin-top: rem(40);
     }
 }
 
-.about__image-container::before {
-    content: "";
-    display: block;
-    padding-top: 70%;
-}
+ .about__image-container {
+     padding-top: rem(25);
+     width: 82%;
+     max-width: rem(600);
+     margin-left: auto;
+     @include mq(md){
+        max-width: rem(880);
+        margin-left: rem(204);
+        padding-top: rem(80);
+    }
+ }
 
-.about__image1{
+.about__image-container-sub {
     position: absolute;
     top: 0;
     left: 0;
     z-index: 9;
     width: 37%;
-    @include mq(md){
-        max-width: rem(400);
-        aspect-ratio: 400 / 606;
+    aspect-ratio: 128 /194;
+     @include mq(md){
+        width: 37%;
         object-fit: cover;
-     }
+      }
 }
 
- .about__image2 {
-      position: absolute;
-      z-index: 8;
-      top: rem(25);
-      right: 0;
-      width: 82%;
-      @include mq(md){
-        max-width: rem(880);
-        aspect-ratio: 880 / 581;
-        object-fit: cover;
-        top: rem(80);
-      }
-  }
+
+//  .about__image1{
+//  }
+
+//  .about__image2 {
+//       position: absolute;
+//       z-index: 8;
+//       top: rem(25);
+//       right: 0;
+//       width: 82%;
+//       @include mq(md){
+//         max-width: rem(880);
+//         aspect-ratio: 880 / 581;
+//         object-fit: cover;
+//         top: rem(80);
+//       }
+//   }
 
 .about__image3 {
     position: absolute;
     @include mq(md){
         right: calc(50% - min(48vw,638px));
-        bottom: rem(18);
+        bottom: rem(-94);
         width: rem(194);
         z-index: 9;
     }
 }
 
  .about__text-group {
-    margin-top: rem(10);
+    margin-top: rem(40);
      @include mq(md){
-        margin-top: rem(-2);
-        padding-top: 0%;
         position: absolute;
         z-index: 10;
-        right: rem(27);
+        right: rem(54);
         max-width: rem(880);
-        top: 26%;
-        bottom: 0;
-        display: grid;
-        grid-template-columns: repeat(2,1fr);
+        bottom: 33%;
+        display: flex;
+        gap: rem(40);
      }
  }
 
@@ -118,7 +108,7 @@
      color: $green;
      margin-top: rem(16);
      @include mq(md){
-        width: 90%;
+        max-width: rem(388);
         color: $white;
         margin-top: 0;
      }
