--- a/src/sass/plugin/_swiper.scss
+++ b/src/sass/plugin/_swiper.scss
@@ -4,8 +4,8 @@
 .swiper-slide picture,
 .swiper-slide img {
     height: inherit;
-    max-height: 100%;
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
 }
 
 .swiper-slide img{
