--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -27,7 +27,6 @@
      margin-left: auto;
      @include mq(md){
         max-width: rem(880);
-        margin-left: rem(204);
         padding-top: rem(80);
     }
  }
@@ -45,24 +44,6 @@
       }
 }
 
-
-//  .about__image1{
-//  }
-
-//  .about__image2 {
-//       position: absolute;
-//       z-index: 8;
-//       top: rem(25);
-//       right: 0;
-//       width: 82%;
-//       @include mq(md){
-//         max-width: rem(880);
-//         aspect-ratio: 880 / 581;
-//         object-fit: cover;
-//         top: rem(80);
-//       }
-//   }
-
 .about__image3 {
     position: absolute;
     @include mq(md){
@@ -79,10 +60,10 @@
         position: absolute;
         z-index: 10;
         right: rem(54);
-        max-width: rem(880);
         bottom: 33%;
         display: flex;
         gap: rem(40);
+        aspect-ratio: 840 / 242;
      }
  }
 
