--- a/src/sass/module/_button.scss
+++ b/src/sass/module/_button.scss
@@ -5,7 +5,6 @@
     transition: .2s cubic-bezier(0.45, 0, 0.55, 1);
 }
 
-//ボタンの基本コード
 .button {
     position: relative;
     right: rem(3);
@@ -30,7 +29,7 @@
     z-index: -1;
 }
 
-//矢印追加
+//矢印
 .button span {
     position: relative;
     z-index: 3;
