--- a/src/sass/module/_contact-info.scss
+++ b/src/sass/module/_contact-info.scss
@@ -4,27 +4,21 @@
     position: relative;
 }
 
-.contact-info__inner {
-    max-width: rem(1130);
-    padding-left: rem(30);
-    padding-right: rem(30);
-    margin-inline: auto;
-    @include mq(md){
-        padding-right: $padding-pc;
-        padding-left: $padding-pc;
-    }
-}
-
-.contact-info__img-fish {
+.contact-info:after {
+    content: "";
+    background-image: url(../images/common/fish_3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
     width: rem(109);
+    height: rem(50);
     top: rem(-27);
-    right: calc(50% - min(48vw,172px));
+    right: calc(50% - min(48vw,rem(172)));
     @include mq(md){
         top: rem(-43);
-        right: calc(50% - min(48vw,670px));
+        right: calc(50% - min(48vw,rem(670)));
         width: rem(301);
-        height: auto;
+        height: rem(138);
     }
 }
 
