--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -8,23 +8,14 @@
     }
 }
 
-.information__inner {
+.information__contents {
     max-width: rem(600);
-    padding-left: $padding-sp;
-    padding-right: $padding-sp;
     margin-inline: auto;
     @include mq(md){
-        max-width: rem(1130);
-        padding-left: $padding-pc;
-        padding-right: $padding-pc;
-    }
-}
-
-
-.information__contents {
-    @include mq(md){
+        max-width: 100%;
         display: flex;
-        margin-top: rem(14);
+        gap: rem(48);
+        margin-top: rem(40);
     }
 }
 
@@ -35,10 +26,12 @@
 }
 
 .information__image {
-    margin-top: rem(27);
     position: relative;
     width: 100%;
-    margin: rem(30) auto 0;
+    margin-top: rem(30);
+    @include mq(md){
+        margin-top: rem(0);
+    }
 }
 
 .information__image img {
@@ -56,8 +49,7 @@
     margin-top: rem(28);
     @include mq(md){
         margin-top: 0;
-        margin-left: rem(48);
-        max-width: rem(492);
+        max-width: 46%;
         width: 100%;
         margin-top: rem(87);
     }
