--- a/src/sass/module/_voice.scss
+++ b/src/sass/module/_voice.scss
@@ -7,34 +7,33 @@
     }
 }
 
-.voice__inner {
-    max-width: rem(1130);
-    padding-left: $padding-sp;
-    padding-right: $padding-sp;
-    margin-inline: auto;
+.voice::after {
     @include mq(md){
-       padding-left: $padding-pc;
-       padding-right: $padding-pc;
-    }
-}
-
-.voice__img-fish {
-    @include mq(md){
+        content: "";
+        display: block;
+        background-image: url(../images/common/fish_2.png);
         position: absolute;
+        background-repeat: no-repeat;
+        background-size: cover;
         top: rem(-120);
-        left: calc(50% - min(48vw,621px));
+        left: calc(50% - min(48vw,rem(621)));
         width: rem(301);
-        height: auto;
+        height: rem(138);
     }
 }
 
-.voice__img-tatunootoshigo {
-    @include mq(md){
+.voice::before {
+    @include mq(md){display: block;
+        content: "";
+        background-image: url(../images/common/tatunootoshigo.png);
+        position: absolute;
+        background-repeat: no-repeat;
+        background-size: cover;
         position: absolute;
         bottom: rem(-71);
-        right: calc(50% - min(48vw,540px));
+        right: calc(50% - min(48vw,rem(540)));
         width: rem(71);
-        height: auto;
+        height: rem(162);
     }
 }
 
