--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -2,16 +2,16 @@
 
 
 .campaign__container {
-    position: relative;
     margin-top: rem(27);
+    margin-right: calc(50% - 50vw);
     @include mq(md){
        margin-top: rem(40);
-       margin-right: calc(50% - 50vw);
    }
 }
 
 .campaign__btn {
     margin-top: rem(31);
+    padding-bottom: rem(16);
     @include mq(md){
         margin-top: rem(72);
     }
