--- a/src/sass/plugin/_swiper.scss
+++ b/src/sass/plugin/_swiper.scss
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+.camping__inner {
+  position: relative;
+}
+
 .swiper-slide img{
     object-fit: cover;
 }
@@ -18,14 +22,15 @@
 
 .swiper-button-next,
 .swiper-button-prev {
-  position: absolute;
+   position: initial;
+   width: rem(80);
+   height: rem(80);
+   margin-top: 0;
 }
 
 .swiper-button-next::after,
 .swiper-button-prev::after {
     content: "";
-    position: absolute;
-    transform: translate(-50%);
     transition: all 0.3s ease 0s;
     @include mq(md){
         width: rem(80);
@@ -50,15 +55,11 @@
     background: transparent url(../images/common/prev.png) no-repeat center / contain;
 }
 
-.swiper-button-prev {
-  left: 72%;
-  top:  -14%;
-  bottom: 0;
+.campaign__button-group {
+  display: flex;
+  gap: rem(80);
+  flex-direction: row-reverse;
+  top: 0;
+  right: calc(50% - min(48%,rem(600)));
+  position: absolute;
 }
-
-.swiper-button-next {
-  left: 84.6%;
-    top: -14%;
-  bottom: 0;
-}
-
