--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -7,7 +7,7 @@
     left: 0;
     right: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background-color: $green-accent;
     margin-top: rem(80);
 }
@@ -18,19 +18,22 @@
 
 .sp-nav__inner  {
     padding-top: rem(25);
-    padding-bottom: 3rem;
-    padding-right: rem(15);
-    padding-left: rem(15);
+    padding-bottom: rem(50);
     box-sizing: border-box;
     overflow-y: auto;
     height: calc(100vh - 5rem);
+}
+
+.sp-nav__wrap {
     display: flex;
     justify-content: center;
+    padding-right: rem(21);
 }
 
 .sp-nav__contents {
     display: flex;
     gap: rem(5);
+
 }
 
 .sp-nav__flex {
