--- a/src/sass/module/_about.scss
+++ b/src/sass/module/_about.scss
@@ -20,7 +20,7 @@
         background-repeat: no-repeat;
         background-size: cover;
          right: calc(50% - min(48vw,rem(638)));
-         bottom: rem(-94);
+         bottom: rem(-87);
          width: rem(194);
          height: rem(181);
          z-index: 9;
@@ -49,16 +49,6 @@
         width: 37%;
         object-fit: cover;
       }
-}
-
-.about__image3 {
-    position: absolute;
-    @include mq(md){
-        right: calc(50% - min(48vw,638px));
-        bottom: rem(-94);
-        width: rem(194);
-        z-index: 9;
-    }
 }
 
  .about__text-group {
@@ -98,7 +88,7 @@
      @include mq(md){
         max-width: rem(388);
         color: $white;
-        margin-top: 0;
+        margin-top: rem(-6);
      }
  }
 
