--- a/src/sass/module/_contact-info.scss
+++ b/src/sass/module/_contact-info.scss
@@ -15,7 +15,7 @@
     top: rem(-27);
     right: calc(50% - min(48vw,rem(172)));
     @include mq(md){
-        top: rem(-43);
+        top: rem(-40);
         right: calc(50% - min(48vw,rem(670)));
         width: rem(301);
         height: rem(138);
@@ -25,7 +25,7 @@
 .contact-info__contents {
     @include mq(md){
         display: flex;
-        padding: rem(80) 0;
+        padding: rem(80) rem(30) rem(78) rem(36);
         box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
     }
 }
