--- a/src/sass/module/_information.scss
+++ b/src/sass/module/_information.scss
@@ -46,12 +46,11 @@
 }
 
 .information__body {
-    margin-top: rem(28);
+    margin-top: rem(25);
     @include mq(md){
-        margin-top: 0;
         max-width: 46%;
         width: 100%;
-        margin-top: rem(87);
+        margin-top: rem(61);
     }
 }
 
@@ -78,6 +77,7 @@
     color: $green;
     @include mq(md){
         padding-right: rem(2);
+        max-width: 99%;
     }
 }
 
