--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -1,6 +1,140 @@
 @use "global" as *;
 
 .contact {
+    position: relative;
+}
+
+.contact:after {
+    content: "";
+    background-image: url(../images/common/fish_3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    width: rem(109);
+    height: rem(50);
+    top: rem(-27);
+    right: calc(50% - min(48vw,rem(172)));
+    @include mq(md){
+        top: rem(-40);
+        right: calc(50% - min(48vw,rem(670)));
+        width: rem(301);
+        height: rem(138);
+    }
+}
+
+.contact__contents {
+    @include mq(md){
+        display: flex;
+        padding: rem(80) rem(30) rem(78) rem(36);
+        box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
+    }
+}
+
+.contact__info {
+    text-align: center;
+    @include mq(md){
+        width: 53%;
+        padding-right: rem(70);
+        border-right: rem(1) solid $green-accent;
+    }
+}
+
+.contact__info-inner {
+    max-width: rem(600);
+    padding-left: rem(15);
+    padding-right: rem(15);
+    margin-inline: auto;
+}
+
+.contact__info-title {
+    position: relative;
+    text-align: center;
+    width: 100%;
+    border-bottom: rem(1) solid $green-accent;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    @include mq(md){
+       filter: none;
+       padding-bottom: rem(5);
+  }
+}
+
+.contact__info-title::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: rem(-8);
+    width: 100%;
+    height: rem(4);
+    background-color: rgba(0, 0, 0, 0.05);
+    filter: blur(rem(2));
+    @include mq(md){
+        background-color: rgba(0, 0, 0, 0);
+    }
+}
+
+.contact__info-title img{
+    display: inline-block;
+    width: rem(174);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    @include mq(md){
+        width: rem(200);
+        filter: none;
+    }
+}
+
+.contact__info-text-group {
+    @include mq(md){
+       min-width: rem(146);
+    }
+}
+
+.contact__info-container {
+    margin-top: rem(15);
+    @include mq(md){
+        display: flex;
+        margin-top: rem(24);
+        gap: rem(21);
+    }
+}
+
+.contact__info-text {
+    font-family: $base-font-family;
+    font-weight: $regular;
+    font-size: rem(16);
+    line-height: calc(24/16);
+    color: $green;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    @include mq(md){
+        text-shadow: none;
+        text-align: left;
+   }
+}
+
+.contact__info-text:not(:first-child) {
+    margin-top: rem(4);
+}
+
+.contact__info-map {
+    aspect-ratio: 295 / 160;
+    margin-top: rem(16);
+    transition: all 0.3s ease 0s;
+    @include mq(md){
+        max-width: 62%;
+        margin-top: 0;
+    }
+}
+
+.contact__info-map:hover {
+    opacity: 0.6;
+}
+.contact__info-map iframe {
+    width: 100%;
+    height: 100%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    max-width: rem(600);
+}
+
+.contact__column {
     text-align: center;
     margin-top: rem(28);
     width: 100%;
@@ -13,7 +147,7 @@
     }
 }
 
-.contact__text {
+.contact__column-text {
     font-family: $base-font-family;
     font-weight: $regular;
     font-size: rem(14);
@@ -28,16 +162,16 @@
     }
 }
 
-.contact__btn {
+.contact__column-btn {
     margin-top: rem(41);
     text-align: justify;
 }
 
-.contact__section-header {
+.contact__column-section-header {
     text-align: center;
 }
 
-.contact__section-header-title {
+.contact__column-section-header-title {
     font-family: $third-font-family;
     font-weight: $regular;
     font-size: rem(80);
@@ -50,11 +184,11 @@
     }
 }
 
-.contact__section-header-title::first-letter {
+.contact__column-section-header-title::first-letter {
     color: $green-accent;
 }
 
-.contact__section-header-subtitle {
+.contact__column-section-header-subtitle {
     font-family: $base-font-family;
     font-weight: $regular;
     font-size: rem(12);
