--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -32,8 +32,10 @@
 
 .contact__info {
     text-align: center;
+    padding: 0 rem(25);
     @include mq(md){
         width: 53%;
+        padding-left: 0;
         padding-right: rem(85);
         border-right: rem(1) solid $green-accent;
     }
@@ -113,12 +115,13 @@
 }
 
 .contact__info-map {
-    max-width: 87%;
+    aspect-ratio: 295 / 160;
+    max-width: rem(295);
     margin-inline: auto;
     margin-top: rem(16);
     transition: all 0.3s ease 0s;
     @include mq(md){
-        max-width: 62%;
+        aspect-ratio: 273 / 148;
         margin-top: 0;
     }
 }
@@ -135,7 +138,7 @@
 
 .contact__column {
     text-align: center;
-    margin-top: rem(28);
+    margin-top: rem(37);
     width: 100%;
     @include mq(md){
         padding-left: 0;
@@ -162,7 +165,7 @@
 }
 
 .contact__column-btn {
-    margin-top: rem(41);
+    margin-top: rem(36);
     text-align: justify;
 }
 
