--- a/src/sass/plugin/_swiper.scss
+++ b/src/sass/plugin/_swiper.scss
@@ -44,6 +44,7 @@
 .js-campaign-swiper {
   padding-bottom: rem(10);
   padding-left: rem(6);
+  margin-left: rem(-6);
 }
 
 .swiper-button-next::after {
