--- a/src/sass/module/_voice-card.scss
+++ b/src/sass/module/_voice-card.scss
@@ -3,15 +3,15 @@
 .voice-card {
     box-shadow: 2px 2px 10px 0px  rgb(0, 0, 0, 0.25);
     padding: rem(15) rem(16) rem(24) rem(16);
-    max-width: rem(345);
-    min-width: rem(345);
+    // max-width: rem(345);
+    // min-width: rem(345);
     width: 100%;
     display: flex;
     flex-direction: column;
     height: 100%;
     @include mq(md){
         padding: rem(24);
-        max-width: rem(520);
+        // max-width: rem(520);
     }
 }
 
