--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -3,13 +3,16 @@
 .blog-card {
     display: block;
     box-shadow: 2px 2px 10px 0px  rgb(0, 0, 0, 0.25);
-    padding: rem(16) rem(16) rem(24) rem(16);
+    padding: rem(10) rem(22) rem(26);
     background-color: $white;
     transition: opacity 0.4s;
     width: 100%;
     display: grid;
     grid-template-rows: auto 1fr;
     height: 100%;
+    @include mq(md){
+        padding: rem(16) rem(16) rem(24) rem(16);
+    }
 }
 
 .blog-card__img {
