--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -54,6 +54,7 @@ img {
   max-width: 100%;
   display: block;
   width: 100%;
+  height: auto;
 }
 
 /* Natural flow and rhythm in articles by default */
@@ -117,3 +118,4 @@ a {
   color: inherit;
   transition: opacity 0.3s;
 }
+
