--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -11,7 +11,7 @@
     grid-template-rows: auto 1fr;
     height: 100%;
     @include mq(md){
-        padding: rem(16) rem(16) rem(24) rem(16);
+        padding: rem(10) rem(16) rem(24) rem(16);
     }
 }
 
@@ -27,10 +27,11 @@
     object-fit: cover;
     transition: all 0.5s ease 0s;
 }
-
+@media (any-hover: hover) {
 .blog-card:hover .blog-card__img img{
     transform: scale(1.2);
     opacity: 0.6;
+    }
 }
 
 .blog-card__body {
