--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -124,10 +124,12 @@
         margin-top: 0;
     }
 }
-
+@media (any-hover: hover) {
 .contact__info-map:hover {
     opacity: 0.6;
 }
+}
+
 .contact__info-map iframe {
     width: 100%;
     height: 100%;
