--- a/src/sass/module/_footer-nav.scss
+++ b/src/sass/module/_footer-nav.scss
@@ -61,9 +61,10 @@
     flex-grow: 1;
     transition: opacity 0.4s;
 }
-
+@media (any-hover: hover) {
 .footer-nav__title:hover {
     opacity: 0.7;
+}
 }
 
 .footer-nav__title::before {
@@ -98,6 +99,8 @@
     transition: opacity 0.4s;
 }
 
+@media (any-hover: hover) {
 .footer-nav__list:hover {
     opacity: 0.7;
+}
 }
