--- a/src/sass/module/_footer.scss
+++ b/src/sass/module/_footer.scss
@@ -45,8 +45,10 @@
     transition: opacity 0.4s;
 }
 
+@media (any-hover: hover) {
 .footer__icon-item:hover{
     opacity: 0.7;
+}
 }
 
 .footer__copyright {
