--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -63,8 +63,10 @@
     transition: opacity 0.4s;
 }
 
+@media (any-hover: hover) {
 .sp-nav__title:hover {
     opacity: 0.7;
+}
 }
 
 .sp-nav__title::before {
@@ -97,8 +99,10 @@
     transition: opacity 0.4s;
 }
 
+@media (any-hover: hover) {
 .sp-nav__list:hover {
     opacity: 0.7;
+}
 }
 
 .sp-nav__body {
