--- a/src/sass/module/_sp-nav.scss
+++ b/src/sass/module/_sp-nav.scss
@@ -7,6 +7,7 @@
     left: 0;
     right: 0;
     width: 100%;
+    height: 100vh;
     height: 100dvh;
     background-color: $green-accent;
     margin-top: rem(80);
