--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -21,6 +21,7 @@
     height: rem(1);
     background-color: $white;
     transition: 0.3s;
+    border-radius: rem(1);
 }
 
 .hamburger span:nth-child(1) {
