--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -114,3 +114,45 @@
     }
 }
 
+.campaign-card__content {
+    margin-top: rem(24);
+}
+
+.campaign-card__text-item {
+    font-size: rem(16);
+    font-weight: $regular;
+    font-family: $base-font-family;
+    color: $green;
+    line-height: calc(24 / 16);
+    text-align: left;
+}
+
+.campaign-card__meta {
+    text-align: center;
+    margin-top: rem(32);
+}
+
+.campaign-card__date {
+    font-size: rem(16);
+    font-weight: $bold;
+    font-family: $fourth-font-family;
+    color: $green-accent;
+    line-height: calc(18 / 16);
+}
+
+.campaign-card__comment {
+    font-size: rem(14);
+    font-weight: $regular;
+    font-family: $base-font-family;
+    color: $green-accent;
+    line-height: calc(18 / 14);
+    margin-top: rem(7);
+}
+
+.campaign-card__apply {
+    margin-top: rem(16);
+}
+
+.campaign-card__text--left {
+    text-align: left;
+}
