--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -115,7 +115,7 @@
 }
 
 .campaign-card__content {
-    margin-top: rem(24);
+    margin-top: rem(26);
 }
 
 .campaign-card__text-item {
@@ -138,6 +138,9 @@
     font-family: $fourth-font-family;
     color: $green-accent;
     line-height: calc(18 / 16);
+    @include mq(md){
+       margin-left: rem(-16);
+    }
 }
 
 .campaign-card__comment {
@@ -146,7 +149,7 @@
     font-family: $base-font-family;
     color: $green-accent;
     line-height: calc(18 / 14);
-    margin-top: rem(7);
+    margin-top: rem(5);
 }
 
 .campaign-card__apply {
@@ -155,4 +158,10 @@
 
 .campaign-card__text--left {
     text-align: left;
+}
+
+.campaign-card__second-price--layout {
+    @include mq(md){
+       margin-left: rem(40);
+    }
 }
