--- a/src/sass/page/_layout-about.scss
+++ b/src/sass/page/_layout-about.scss
@@ -1,5 +1,8 @@
 @use "global" as *;
 
 .layout-about {
-    // margin-top: rem(52);
+    margin-top: rem(52);
+    @include mq(md){
+       margin-top: rem(150);
+    }
 }
