--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -38,6 +38,7 @@ $bold: 700;
 $black: #000;
 $white: #fff;
 $gray: #F2F2F2;
+$gray2: #202020;
 $green: #0D2936;
 $green2: #DDF0F1;
 $green-accent: #408F95;
