--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -4,50 +4,60 @@
     display: grid;
     margin-top: rem(40);
     gap: 8px;
+    cursor: pointer;
      @include mq(md){
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas:
+        "A B"
+        "A C"
+        "D F"
+        "E F";
      }
  }
 
- .gallery__image_1 {
-       aspect-ratio: 523 / 345;
-       width: 100%;
-       height: 100%;
-       object-fit: cover
-
- }
-
- .gallery__image_2 {
-       aspect-ratio: 345 / 219;
-       width: 100%;
-       height: 100%;
-       object-fit: cover
+  .gallery__image-1 {
+    @include mq(md){
+        grid-area: A;
     }
+  }
 
- .gallery__image_3 {
-        aspect-ratio: 345 / 219;
-        width: 100%;
-        height: 100%;
-        object-fit: cover
- }
-
- .gallery__image_4 {
-    aspect-ratio: 345 / 219;
-    width: 100%;
-    height: 100%;
-    object-fit: cover
- }
-
- .gallery__image_5 {
-    aspect-ratio: 345 / 219;
-    width: 100%;
-    height: 100%;
-    object-fit: cover
-
- }
-
- .gallery__image_6 {
-        aspect-ratio: 523 / 345;
-        width: 100%;
-        height: 100%;
-        object-fit: cover
+  .gallery__image-2 {
+    @include mq(md){
+        grid-area: B;
+    }
      }
+
+  .gallery__image-3 {
+    @include mq(md){
+        grid-area: C;
+    }
+  }
+
+  .gallery__image-4 {
+    @include mq(md){
+        grid-area: D;
+    }
+  }
+
+  .gallery__image-5 {
+    @include mq(md){
+        grid-area: E;
+    }
+}
+
+  .gallery__image-6 {
+    @include mq(md){
+        grid-area: F;
+    }
+}
+
+.gallery__contents img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.3s;
+}
+
+.gallery__contents img:hover {
+    opacity: 0.6;
+}
