--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -6,18 +6,21 @@
     gap: 8px;
     cursor: pointer;
      @include mq(md){
-        grid-template-columns: 1fr 1fr;
+        margin-top: rem(82);
         grid-template-areas:
         "A B"
         "A C"
         "D F"
         "E F";
+        grid-template-columns: rem(492) 1fr; /* 列の幅を指定 */
+        grid-template-rows: auto; /* 必要に応じて自動で高さを調整 */
      }
  }
 
   .gallery__image-1 {
     @include mq(md){
         grid-area: A;
+        width: rem(492);
     }
   }
 
@@ -48,6 +51,8 @@
   .gallery__image-6 {
     @include mq(md){
         grid-area: F;
+        width: rem(492);
+        height: rem(746);
     }
 }
 
