--- a/src/sass/page/_layout-gallery.scss
+++ b/src/sass/page/_layout-gallery.scss
@@ -1,5 +1,8 @@
 @use "global" as *;
 
 .layout-gallery {
-    margin-top: rem(40);
+    margin-top: rem(36);
+    @include mq(md){
+       margin-top: rem(118);
+    }
 }
