--- a/src/sass/module/_gallery.scss
+++ b/src/sass/module/_gallery.scss
@@ -7,52 +7,51 @@
     cursor: pointer;
      @include mq(md){
         margin-top: rem(82);
-        grid-template-areas:
-        "A B"
-        "A C"
-        "D F"
-        "E F";
-        grid-template-columns: rem(492) 1fr; /* 列の幅を指定 */
-        grid-template-rows: auto; /* 必要に応じて自動で高さを調整 */
+        grid-auto-flow: dense;
+        grid-template-columns: 492fr 80fr 492fr;
+        grid-template-rows: rem(369) rem(369) rem(369) rem(369);
      }
  }
 
-  .gallery__image-1 {
+  .gallery__image--1 {
     @include mq(md){
-        grid-area: A;
-        width: rem(492);
+      grid-row: 1 / 3;
+      grid-column: 1 / 2;
     }
   }
 
-  .gallery__image-2 {
+  .gallery__image--2 {
     @include mq(md){
-        grid-area: B;
+        grid-row: 1 / 2;
+        grid-column: 2 / 4;
     }
      }
 
-  .gallery__image-3 {
+  .gallery__image--3 {
     @include mq(md){
-        grid-area: C;
+      grid-row: 2 / 3;
+      grid-column: 2 / 4;
     }
   }
 
-  .gallery__image-4 {
+  .gallery__image--4 {
     @include mq(md){
-        grid-area: D;
+      grid-row: 3 / 4;
+      grid-column: 1 / 3;
     }
   }
 
-  .gallery__image-5 {
+  .gallery__image--5 {
     @include mq(md){
-        grid-area: E;
+        grid-row: 4 / 5;
+        grid-column: 1 / 3;
     }
 }
 
-  .gallery__image-6 {
+  .gallery__image--6 {
     @include mq(md){
-        grid-area: F;
-        width: rem(492);
-        height: rem(746);
+        grid-row: 3 / 5;
+        grid-column: 3 / 4;
     }
 }
 
