--- a/src/sass/module/_page-blog.scss
+++ b/src/sass/module/_page-blog.scss
@@ -1,10 +1,10 @@
 @use "global" as *;
 
-.page-about {
+.page-blog {
     position: relative;
-    z-index: 1;
 }
-.page-about::before{
+
+.page-blog::before {
     content: "";
     background-image: url(../images/common/fish_2.png);
     background-repeat: no-repeat;
@@ -23,6 +23,21 @@
     }
 }
 
-.page-about__section-header {
-    margin-top: rem(40);
+.page-blog__contents{
+
+}
+.page-blog__cards {
+    display: grid;
+    gap: rem(40);
+
+}
+.page-blog-cards__item{
+
+}
+
+.page-blog__pagenavi {
+    margin-top: rem(80);
+}
+.page-blog__sidebar {
+    margin-top: rem(80);
 }
