--- a/src/sass/module/_sidebar.scss
+++ b/src/sass/module/_sidebar.scss
@@ -2,14 +2,13 @@
 
 .sidebar__items {
     padding-inline: rem(25);
-
     @include mq(md) {
         padding-inline: 0;
     }
 }
 
 .sidebar__item:not(:first-child) {
-    margin-top: rem(80);
+    margin-top: rem(82);
 }
 
 .sidebar__title {
@@ -43,19 +42,19 @@
 
 .sidebar__article-item {
     border: 1px solid $gray3;
-    display: grid;
-    grid-template-columns: calc(121 / 294 * 100%) 1fr;
+    display: flex;
     gap: rem(16);
     padding: rem(16);
     box-shadow: rem(2) rem(2) rem(10) rgba($black, $alpha: 0.25);
 }
 
 .sidebar__article-item:not(:first-child) {
-    margin-top: rem(24);
+    margin-top: rem(22);
 }
 
 .sidebar__article-image {
     overflow: hidden;
+    width: 46%;
 }
 
 .sidebar__article-image img {
@@ -75,8 +74,9 @@
 }
 
 .sidebar__article-textbox {
-    text-align: justify;
+    margin-top: rem(-8);
 }
+
 
 .sidebar__article-data {
     font-size: rem(12);
@@ -92,10 +92,11 @@
     font-family: $base-font-family;
     color: $green;
     line-height: calc(23 / 16);
+    margin-top: rem(2);
 }
 
 .sidebar__review {
-    margin-top: rem(24);
+    margin-top: rem(23);
 }
 
 .sidebar__review-image img {
@@ -106,7 +107,7 @@
 }
 
 .sidebar__review-textbox {
-    margin-top: rem(16);
+    margin-top: rem(21);
 }
 
 .sidebar__review-age {
@@ -118,7 +119,7 @@
 }
 
 .sidebar__review-text {
-    margin-top: rem(8);
+    margin-top: rem(12);
     font-size: rem(24);
     font-weight: $medium;
     font-family: $base-font-family;
@@ -136,16 +137,89 @@
 
 .sidebar__campaign-cards {
     display: grid;
-    grid-template-columns: 100%;
     gap: rem(40);
+}
 
+.sidebar__campaign-card {
+    box-shadow: rem(2) rem(1) rem(10) 0px rgb(0, 0, 0, 0.25);
+}
+
+.sidebar__campaign-card__img img {
+    aspect-ratio: 294 / 188;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.sidebar__campaign-card__body {
+    display: grid;
+    height: 100%;
+    padding: rem(16) rem(16) rem(24) rem(16);
+}
+
+.sidebar__campaign-card__title {
+    margin-top: rem(4);
+    font-family: $base-font-family;
+    font-weight: $medium;
+    font-size: rem(16);
+    line-height: calc(24/16);
+    color: $green;
+    border-bottom: 1px solid $green-accent;
+    padding-bottom: rem(8);
+    text-align: center;
+}
+
+.sidebar__campaign-card__text {
+    margin-top: rem(8);
+    text-align: center;
+    font-family: $base-font-family;
+    font-weight: $regular;
+    font-size: rem(14);
+    line-height: calc(24/14);
+    color: $green;
+}
+
+.sidebar__campaign-card__price {
+    display: flex;
+    align-items: baseline;
+    justify-content: center;
+    margin-top: rem(8);
+    gap: rem(10);
+}
+
+.sidebar__campaign-card__first-price {
+     position: relative;
+    font-family: $fourth-font-family;
+    font-weight: $bold;
+    font-size: rem(20);
+    line-height: 1;
+    color: $green;
+}
+
+.sidebar__campaign-card__first-price::after {
+    content: "";
+    position: absolute;
+    border: rem(2) solid #C94800;
+    width: rem(75);
+    left: 0;
+    top: 40%;
+}
+
+.sidebar__campaign-card__second-price {
+    font-family: $fourth-font-family;
+    font-weight: $bold;
+    font-size: rem(32);
+    line-height: 1;
+    color: $green-accent;
 }
 
 .sidebar__archive {
-    margin-top: rem(24);
+    margin-top: rem(23);
 }
 
-.sidebar__archive-group {}
+.sidebar__archive-group {
+    margin-top: rem(7);
+}
 
 .sidebar__archive-calendar,
 .sidebar__archive-month {
@@ -156,13 +230,14 @@
     line-height: calc(35 / 24);
     display: flex;
     align-items: center;
-    gap: rem(8);
+    gap: rem(10);
     justify-content: start;
     cursor: pointer;
     transition: all 0.3s;
 }
 
 @media (any-hover: hover) {
+
     .sidebar__archive-calendar:hover,
     .sidebar__archive-month:hover {
         opacity: 0.6;
@@ -172,24 +247,22 @@
 .sidebar__archive-calendar::before {
     content: "";
     display: inline-block;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-right: rem(12) solid transparent;
-    border-left: rem(12) solid transparent;
-    border-top: rem(21) solid $green-accent;
-    border-bottom: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: rem(22);
+    height: rem(18);
+    background-image: url(../images/common/arrow-bottom.png);
+    margin-top: rem(7);
 }
 
 .sidebar__archive-month::before {
     content: "";
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-top: rem(12) solid transparent;
-    border-bottom: rem(12) solid transparent;
-    border-left: rem(21) solid $green-accent;
-    border-right: 0;
+    display: inline-block;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: rem(18);
+    height: rem(22);
+    background-image: url(../images/common/arrow-right.png);
 }
 
 .sidebar__archive-months {
@@ -198,4 +271,6 @@
 
 }
 
-.sidebar__archive-month {}
+.sidebar__archive-month:not(:first-child) {
+    margin-top: rem(4);
+}
