--- a/src/sass/module/_sidebar.scss
+++ b/src/sass/module/_sidebar.scss
@@ -6,7 +6,9 @@
         padding-inline: 0;
     }
 }
-
+.sidebar__items--inner{
+    padding-inline: rem(40);
+}
 .sidebar__item:not(:first-child) {
     margin-top: rem(82);
 }
@@ -75,6 +77,7 @@
 
 .sidebar__article-textbox {
     margin-top: rem(-8);
+    min-width: rem(112);
 }
 
 
@@ -93,6 +96,7 @@
     color: $green;
     line-height: calc(23 / 16);
     margin-top: rem(2);
+
 }
 
 .sidebar__review {
@@ -237,7 +241,6 @@
 }
 
 @media (any-hover: hover) {
-
     .sidebar__archive-calendar:hover,
     .sidebar__archive-month:hover {
         opacity: 0.6;
@@ -253,7 +256,12 @@
     height: rem(18);
     background-image: url(../images/common/arrow-bottom.png);
     margin-top: rem(7);
+    transition: all 0.3s;
 }
+.sidebar__archive-calendar.open::before{
+    transform: rotate(-90deg);
+}
+
 
 .sidebar__archive-month::before {
     content: "";
@@ -268,6 +276,7 @@
 .sidebar__archive-months {
     margin-top: rem(4);
     margin-left: rem(30);
+    display: none;
 
 }
 
