--- a/src/sass/page/_layout-contact.scss
+++ b/src/sass/page/_layout-contact.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.campaign-contact {
+.layout-contact {
     margin-top: rem(106);
     @include mq(md){
        margin-top: rem(140);
