--- a/src/sass/module/_bredcrumb.scss
+++ b/src/sass/module/_bredcrumb.scss
@@ -7,7 +7,9 @@
     color: $green;
     line-height: calc(20 / 14);
     letter-spacing: 0;
-    
+}
 
+.bredcrumb__text--color {
+    color: $white;
 }
 
