--- a/src/sass/module/_sub-mv.scss
+++ b/src/sass/module/_sub-mv.scss
@@ -12,6 +12,12 @@
     }
 
 }
+.sub-mv__image--height {
+    height: rem(80);
+    @include mq(md){
+       height: rem(90);
+    }
+}
 .sub-mv__title {
     position: absolute;
     top: 50%;
