--- a/src/sass/page/_privacy-contact.scss
+++ b/src/sass/page/_privacy-contact.scss
@@ -1,6 +1,9 @@
 @use "global" as *;
 
 .privacy-contact {
-    margin-top: rem(80);
+    margin-top: rem(106);
+    @include mq(md){
+       margin-top: rem(120);
+    }
 
 }
